--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build_prod": "ng build --prod",
+    "build_prod_michal": "ng build --configuration=production_michal",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
