--- a/k8s-michal/service.yaml
+++ b/k8s-michal/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-frontend
+  name: app-frontend-michal
   namespace: "monitoring-progress-michal"
   labels:
-    app: app-frontend
+    app: app-frontend-michal
 spec:
   type: ClusterIP
   ports:
     - port: 80
   selector:
-    app: app-frontend
+    app: app-frontend-michal
