--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
     "@angular/localize": "~9.1.0",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@swimlane/ngx-charts": "^13.0.2",
     "angularx-social-login": "^2.3.1",
-    "bootstrap": "^4.4.0",
     "jquery": "^3.5.0",
     "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
