--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build_prod": "ng build --prod",
+    "build_prod": "ng build --configuration=production",
     "build_prod_michal": "ng build --configuration=production_michal",
     "test": "ng test",
     "lint": "ng lint",
